@@ -1,5 +1,6 @@
 Changes for 1.4.1:
 
+ - added better error reporting in zbx_malloc() (Alexei)
  - fixed transfer of NULL values between nodes (Alexei)
  - minor Oracle related fixes for frontend (Alexe)
  - fixed reconnection for jabber notifications (Eugene)
